--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,4 +1,27 @@
-body {
+body{
 	
 	background: black;
+	font-family:monospace;
+}
+
+.jumbotron {
+	
+	background-image: url(http://www.theepicengine.com/wp-content/uploads/2012/05/Skateboard.jpg);
+
+	height:500px;
+}
+
+.jumbotron p {
+	
+	color:white;
+}
+
+.jumbotron h1 {
+	
+	color:white;
+}
+
+.containermarketing {
+	
+	color:white;
 }
