--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -82,7 +82,7 @@
 <div class="col-lg-4">
 <img class="img-square" width="140" height="140" alt="Generic placeholder image" src="https://cdn2.iconfinder.com/data/icons/windows-8-metro-style/512/upload.png">
 <h2>Upload</h2>
-<p>Upload your favorite spots, then users can add updates such as the current condition, recent photos and more! </p>
+<p>Upload favorite spots, add updates such as the current condition, recent photos and more! </p>
 <p>
 <a class="btn btn-default" role="button" href="#">View details »</a>
 </p>
