--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -72,8 +72,7 @@
 <div class="col-lg-4">
 <img class="img-square" width="140" height="140" alt="Generic placeholder image" src="https://cdn3.iconfinder.com/data/icons/gray-search-view-toolbar/512/explore-512.png">
 <h2>Find Spots</h2>
-<p>Find local spots near your location you never knew about!                                                        
-
+<p>Find local spots near your location you never knew about! Connect with friends to plan the skate trip of your dreams!
 </p>
 <p>
 <a class="btn btn-default" role="button" href="#">View details »</a>
