--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -89,7 +89,7 @@
 <div class="col-lg-4">
 <img class="img-square" width="140" height="140" alt="Generic placeholder image" src="http://www.icon2s.com/img256/256x256-black-white-android-share.png">
 <h2>Share</h2>
-<p>Users can share a spot with fellow users, send invites for skate meetups, and message and comment fellow users!  </p>
+<p>Users can share a spot with friends, send invites for skate meetups, and message and comment below skate spots!  </p>
 <p>
 <a class="btn btn-default" role="button" href="#">View details »</a>
 </p>
